JWT Implementing in Program.cs

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "UserListingConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HotelListApiDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
+  "JwtSettings": {
+    "Issuer": "HotelListingAPI",
+    "Audience": "HotelListingAPIClient",
+    "DurationInMinutes": 10,
+    "Key": "ThatIsMySecretKey"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
